# UHRSI_Bike_Lane_Analysis

./: .gitignore  README.md  TOdo.md  detect.py  main.py  pyproject.toml  train.py
data/: readme.md
data/input/annotated_bike_lanes/job_4259116_annotations_2026_07_18_18_03_19_ultralytics yolo segmentation 1.0/: data.yaml  train.txt
data/input/idop_kacheln/: idop20rgbi_32_404_5757_1_nw_2025.jp2.aux.xml  idop20rgbi_32_404_5758_1_nw_2025.jp2.aux.xml  idop20rgbi_32_405_5757_1_nw_2025.jp2.aux.xml  idop20rgbi_32_405_5758_1_nw_2025.jp2.aux.xml  idop20rgbi_32_406_5757_1_nw_2025.jp2.aux.xml  idop20rgbi_32_406_5758_1_nw_2025.jp2.aux.xml
docs/: pipeline_report.md
pipeline/: config.py  detect.py  preprocessing.py  train.py
scripts/: config.py  detect.py  detect_roads.py  filter_imagery.py  generate_pipeline_report.py  inspect.py  measure_bikelane_gap.py  osm_features.py  redness.py  shadows.py  texture_analysis.py  texture_embedding.py  tiles.py
scripts/detection/: base.py  bikelane_centerlines.py  centerline_width.py  cross_section.py  dataset.py  dissolve.py  edge_trace.py  osm_road_surface.py  rasterize.py  ribbon_fit.py  texture_detector.py  texture_embedding.py  tiling.py  width.py  yolo_seg_detector.py
scripts/diagnostics/: generate_pipeline_report.py  inspect.py  preview_connection.py  texture_analysis.py
scripts/measurement/: centerline_width.py  cross_section.py  detect_roads.py  dissolve.py  measure_bikelane_gap.py  osm_road_surface.py
scripts/preprocessing/: filter_imagery.py  mask.py  osm_features.py  redness.py  shadows.py  tiles.py
(+3 files in other folders)
