[project]
name = "uhrsi-bike-lane-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.4",
    "numpy>=2.5.1",
    "osmnx>=2.1.0",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
]
